Story 2 rjesen (sredeni exceptioni i sva logika)